--- a/wbes.html
+++ b/wbes.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            background: url('Asset1v.jpg') no-repeat center center fixed;
+            background: url('xDG.jpg') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
             font-family: Arial, sans-serif;
